added CmakeLists (only used by the gameserver) to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ orwell/messages/robot_pb2.py
 orwell/messages/server_game_pb2.py
 orwell/messages/server_web_pb2.py
 orwell/messages/version1_pb2.py
+CMakeLists.txt
