--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 install:
+    - sudo apt-get update -qq
     - sudo apt-get install -qq libprotobuf-dev protobuf-compiler
     - pip install -r requirements.txt
 script:
