--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 install:
-    - sudo add-apt-repository ppa:chris-lea/protobuf
+    - sudo add-apt-repository -y ppa:chris-lea/protobuf
     - sudo apt-get update -qq
     - sudo apt-get install -qq libprotobuf-dev protobuf-compiler
     - pip install -r requirements.txt
