Add address field to Hello message for debugging
ref: messages#33

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,4 @@ orwell/messages/server_game_pb2.py
 orwell/messages/server_web_pb2.py
 orwell/messages/common_pb2.py
 CMakeLists.txt
-venv/
-.venv/
+env/
