--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
+sudo: required
+
 language: python
-python: 2.7
-install:
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq libprotobuf-dev protobuf-compiler
-    - pip install -r requirements.txt
+services:
+    - docker
+
+before_install:
+    - docker pull ubuntu:19.10
+
 script:
-    - ./clean.sh
-    - ./test.sh
+    - git submodule update --init
+    - docker build .
